Assert when changing view modes #88859

Closed
opened 2021-06-05 13:13:52 +02:00 by Campbell Barton · 3 comments

In master (bcf9c73cbc8386bdef1e08af73e66d0e5c57ad6e).

Open this file: crash.blend, press Shift-Z. The file asserts with:

BLI_assert failed: source/blender/draw/intern/draw_cache_impl_mesh.c:1187, drw_mesh_batch_cache_check_available(), at '!DRW_ibo_requested(((GPUIndexBuf **)&cache->final.ibo)[i])'

This bisects back to c65f4b3d76.

Although reverting the changes in master still assert (some refactoring was done in this area since).

In master (`bcf9c73cbc8386bdef1e08af73e66d0e5c57ad6e`). Open this file: [crash.blend](https://archive.blender.org/developer/F10158879/crash.blend), press Shift-Z. The file asserts with: ``` BLI_assert failed: source/blender/draw/intern/draw_cache_impl_mesh.c:1187, drw_mesh_batch_cache_check_available(), at '!DRW_ibo_requested(((GPUIndexBuf **)&cache->final.ibo)[i])' ``` This bisects back to c65f4b3d76. Although reverting the changes in master still assert (some refactoring was done in this area since).
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by 2cd1bc3aa7

This issue was referenced by 2cd1bc3aa7e66a295313c9ab82fbd7ba4b4905e1

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-06-05 14:51:20 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88859
No description provided.