Fix T88859: Assert when changing view modes

The `loose_lines`' ibo was not being initialized.